--- a/styles/style.css
+++ b/styles/style.css
@@ -43,7 +43,8 @@ header {
 
 .barra img {
     margin-left: 20px;
-    width: 300px;
+    margin-bottom: 5px;
+    width: 90px;
 }
 
 nav .menu {
@@ -162,7 +163,7 @@ top: -5px;
     width: 100%;
     height: 30px;
     border-radius: 8px;
-    margin-left: 1rem;
+    margin-top: 10px;
     background-color: var(--color2);
     text-align: center;
     color: var(--color1);
@@ -286,10 +287,6 @@ input[type="file"]{
 }
 
 
-
-
-
-
 /*BTN ELIMINAR*/
 
 .container-btn-delete-all {
@@ -319,8 +316,6 @@ input[type="file"]{
     filter: drop-shadow(0 0 16px rgba(255, 0, 0, 0.636));
     color: var(--color1);
 }
-
-
 
 
 /*TABLA*/
@@ -395,8 +390,6 @@ tbody tr:hover {
 
 
 
-
-
 /*SPINER*/
 
 .spinner {
@@ -425,9 +418,6 @@ tbody tr:hover {
         transform: rotate(360deg);
     }
 }
-
-
-
 
 
 /*FOOT*/
